--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 [ 
-{
+  {
     "title":"Wordpress Blogs",
-    "drawable":"ic_home",
-    "submenu":"Clientes",
+    "drawable":"",
+    "submenu":"",
     "iap":false,
     "tabs":[
       {
@@ -11,11 +11,33 @@
         "arguments":[
           "en.blog.wordpress.com"
         ]
+      },
+      {
+        "title":"Themes",
+        "provider":"wordpress",
+        "arguments":[
+          "en.blog.wordpress.com",
+          "themes"
+        ]
+      },
+      {
+        "title":"Security",
+        "provider":"wordpress",
+        "arguments":[
+          "en.blog.wordpress.com",
+          "security"
+        ]
+      },
+      {
+        "title":"Events",
+        "provider":"wordpress",
+        "arguments":[
+          "en.blog.wordpress.com",
+          "events"
+        ]
       }
     ]
-}
-
-,
+  },
 {
     "title":"Inicial",
     "drawable":"ic_home",
